compilateurDeca/src/test/deca/context/valid/sans_objet/control/no_operation.deca
// Description:
//    Sans-Objet - Control
//    Vérifie que les points-virgules isolés (NoOperation) sont correctement gérés.
//
// Resultats:
//    Vérification réussie.
// 
// Historique:
//    cree le 11/01/2026

{
    int a;
    ; ; ;             // Multiples nœuds NoOperation
    a = 1;
}